adding common function

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <label class="label">
                               <span class="label-text">Pin</span>
                             </label>
-                            <input id="input-pin" autocomplete="off"  type="password" placeholder="Enter your Pin Here" class="input input-bordered" required />
+                            <input id="input-pin-number" autocomplete="off"  type="password" placeholder="Enter your Pin Here" class="input input-bordered" required />
                             <!-- <label class="label">
                               <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
                             </label> -->
@@ -111,6 +111,7 @@
     <!-- footer section ends here -->
 
     <!-- javascritit lin add here -->
+    <script src="./js/Utiliats.js"></script>
     <script src="./js/scripit.js"></script>
 </body>
 
